# poetry-sample

./: README.md  pyproject.toml
poetry_sample/: hello.py
poetry_sample.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
