[tool.poetry]
name = "poetry-sample"
version = "0.1.0"
description = ""
authors = ["moisutsu <moisutsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
